# EE5202CA3

./: .gitignore  CMakeLists.txt  MULTITHREAD_ANALYSIS.md  README.md  SCHEDULING.md  SCHEDULING_TIMETABLE.md  prj.conf
src/: app_context.h  app_threads.c  app_threads.h  har_task.c  har_task.h  lsm6dsl_fifo.c  lsm6dsl_fifo.h  main.c  sensor_drdy.c  sensor_drdy.h  sensor_tasks.c  sensor_tasks.h  status.c  status.h
src/HARnet/: network.c  network.h  network_c_info.json  network_data.c  network_data.h  network_details.h  network_generate_report.txt  stdout.txt
